# rp1-smbus-master

./: CMakeLists.txt  README.md
cmd/: commands.h  main.c
include/: smbus.h  smbus_pec.h
include/smbus/: smbus.h
lib/: smbus.c  smbus_pec.c
